--- a/_layouts/workshop.html
+++ b/_layouts/workshop.html
@@ -14,7 +14,7 @@
     <meta name="latlng" content="{{page.latlng}}" />
     <meta name="language" content="{{page.language}}" />
     <meta name="eventbrite" content="{{page.eventbrite}}" />
-    <meta name="team" content="{{page.instructor|join:'|'}}" />
+    <meta name="task force" content="{{page.instructor|join:'|'}}" />
     <meta name="facilitators" content="{{page.helper|join:'|'}}" />
     <meta name="contact" content="{{page.email}}" />
     {% if page.redirect %}
