--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -2,25 +2,31 @@
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Automating tasks with the Unix shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>13:00</td>  <td>Lunch with 2018 instructor trainees (Anelda)</td> </tr>
+      <tr> <td>13:45</td>  <td>Setting a vision for the Task Force</td> </tr>
+      <tr> <td>14:45</td>  <td>Using HelpScout to manage communication (Maneesha) </td> </tr>
+      <tr> <td>15:20</td>  <td>Afternoon Coffee</td> </tr>
+      <tr> <td>15:30</td>  <td>Continuing conversation about communication (Maneesha) </td> </tr>
+      <tr> <td>16:00</td>  <td>Assessing impact (Kari)</td> </tr>
+      <tr> <td>16:45</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>17:00</td>  <td>Finish</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>08:00</td> <td>Coffee and Breakfast </td> </tr>
+      <tr> <td>08:30</td> <td>Welcome Back </td> </tr>
+      <tr> <td>08:45</td> <td>Setting up a workshop website and workshop Q&A - with trainees</td> </tr>
+      <tr> <td>09:15</td> <td>Building communities - Study Groups, Hacky Hours, and more - with trainees </td> </tr>
+      <tr> <td>09:45</td> <td>Contributing to lessons and other opportunities to get involved - with trainees</td> </tr>
+      <tr> <td>10:30</td> <td>Morning Coffee </td> </tr>
+      <tr> <td>11:00</td> <td>Discussion </td> </tr>
+      <tr> <td>13:00</td> <td>Lunch </td> </tr>
+      <tr> <td>14:00</td> <td>Discussion </td> </tr>
+      <tr> <td>15:30</td> <td>Wrap-up and conclusions </td> </tr>
+      <tr> <td>15:00</td> <td>Finish </td> </tr>
+
     </table>
   </div>
 </div>
