--- a/_includes/sc/who.html
+++ b/_includes/sc/who.html
@@ -1,8 +1,10 @@
 <p id="who">
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
-  <strong>
-    You don't need to have any previous knowledge of the tools
-    that will be presented at the workshop.
-  </strong>
+The meeting is organised for volunteers who stepped forward to join an African Carpentry Task Force in 2018. Calls 
+  for participation went out to all African Carpentry instructors and trainees and was also discussed in the
+  <a href="http://pad.software-carpentry.org/ZA-community-call">African Carpentry Instructor
+    Meetup</a> in 2017. The task force currently consist of African-based instructors who have indicated an interest to support
+  Carpentry workshops in South Africa and the rest of Africa. The task force will be run as a pilot project for 2018 and feedback
+  will be provided to the community about the lessons learned.
+  All task force members are qualified, active Carpentry instructors.
 </p>
