--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -2,8 +2,8 @@
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>13:00</td>  <td>Lunch with 2018 instructor trainees (Anelda)</td> </tr>
-      <tr> <td>13:45</td>  <td>Setting a vision for the Task Force</td> </tr>
+      <tr> <td>13:00</td>  <td>Lunch with 2018 instructor trainees</td> </tr>
+      <tr> <td>13:45</td>  <td>Setting a vision for the Task Force (Anelda) </td> </tr>
       <tr> <td>14:45</td>  <td>Using HelpScout to manage communication (Maneesha) </td> </tr>
       <tr> <td>15:20</td>  <td>Afternoon Coffee</td> </tr>
       <tr> <td>15:30</td>  <td>Continuing conversation about communication (Maneesha) </td> </tr>
@@ -22,6 +22,8 @@
       <tr> <td>09:45</td> <td>Contributing to lessons and other opportunities to get involved - with trainees</td> </tr>
       <tr> <td>10:30</td> <td>Morning Coffee </td> </tr>
       <tr> <td>11:00</td> <td>Discussion </td> </tr>
+      <tr> <td>11:30</td> <td>Mentoring in the Carpentries community (Toby) </td> </tr>
+      <tr> <td>12:30</td> <td>Discussion </td> </tr>
       <tr> <td>13:00</td> <td>Lunch </td> </tr>
       <tr> <td>14:00</td> <td>Discussion </td> </tr>
       <tr> <td>15:30</td> <td>Wrap-up and conclusions </td> </tr>
