--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -1,34 +1,14 @@
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>Friday, 16 November</h3>
     <table class="table table-striped">
-      <tr> <td>13:00</td>  <td>Lunch with 2018 instructor trainees</td> </tr>
-      <tr> <td>13:45</td>  <td>Setting a vision for the Task Force (Anelda) </td> </tr>
-      <tr> <td>14:45</td>  <td>Using HelpScout to manage communication (Maneesha) </td> </tr>
-      <tr> <td>15:20</td>  <td>Afternoon Coffee</td> </tr>
-      <tr> <td>15:30</td>  <td>Continuing conversation about communication (Maneesha) </td> </tr>
-      <tr> <td>16:00</td>  <td>Assessing impact (Kari)</td> </tr>
-      <tr> <td>16:45</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>17:00</td>  <td>Finish</td> </tr>
+      <tr> <td>10:00 - 10:30</td>  <td>Welcome and introductions</td> </tr>
+      <tr> <td>10:30 - 10:45</td>  <td>Overview of the RCCPII Capacity Development Project</td> </tr>
+      <tr> <td>10:45 - 11:15</td>  <td>Presentation about professional development opportunities in the Carpentries</td> </tr>
+      <tr> <td>11:15 - 11:45</td>  <td>Q&A Session </td> </tr>
+      <tr> <td>11:45 - 12:15</td>  <td>Growing the Carpentries Community in the Western Cape</td> </tr>
+      <tr> <td>12:15 - 13:00</td>  <td>Completing your Carpentries Instructor Certification</td> </tr>
     </table>
   </div>
-  <div class="col-md-6">
-    <h3>Day 2</h3>
-    <table class="table table-striped">
-      <tr> <td>08:00</td> <td>Coffee and Breakfast </td> </tr>
-      <tr> <td>08:30</td> <td>Welcome Back </td> </tr>
-      <tr> <td>08:45</td> <td>Setting up a workshop website and workshop Q&A - with trainees</td> </tr>
-      <tr> <td>09:15</td> <td>Building communities - Study Groups, Hacky Hours, and more - with trainees </td> </tr>
-      <tr> <td>09:45</td> <td>Contributing to lessons and other opportunities to get involved - with trainees</td> </tr>
-      <tr> <td>10:30</td> <td>Morning Coffee </td> </tr>
-      <tr> <td>11:00</td> <td>Discussion </td> </tr>
-      <tr> <td>11:30</td> <td>Mentoring in the Carpentries community (Toby) </td> </tr>
-      <tr> <td>12:30</td> <td>Discussion </td> </tr>
-      <tr> <td>13:00</td> <td>Lunch </td> </tr>
-      <tr> <td>14:00</td> <td>Discussion </td> </tr>
-      <tr> <td>15:30</td> <td>Wrap-up and conclusions </td> </tr>
-      <tr> <td>16:00</td> <td>Finish </td> </tr>
 
-    </table>
-  </div>
 </div>
