--- a/_includes/sc/who.html
+++ b/_includes/sc/who.html
@@ -1,10 +1,10 @@
 <p id="who">
   <strong>Who:</strong>
-The event is organised as part of the [Rural Campuses Connection Project II](https://tenet-rccpii.github.io/rccpii-2018/)
+  The event is organised as part of the <a href="https://tenet-rccpii.github.io/rccpii-2018/">Rural Campuses Connection Project II</a>
   (RCCPII)
   Capacity Development Programme. Everybody who has participated in Carpentry instructor training is invited to join us 
   for an informal meetup followed by an opportunity to discuss progress with the
-  [instructor checkout process](https://carpentries.github.io/instructor-training/checkout/) for instructor trainees who 
+  <a href="https://carpentries.github.io/instructor-training/checkout/">instructor checkout process</a> for instructor trainees who 
   still want to complete their qualification.
 </p>
 
