--- a/_includes/workshop_ad.html
+++ b/_includes/workshop_ad.html
@@ -12,7 +12,7 @@
         </div>
         <div class="col-md-6">
           <p>
-          <strong>Task Force:</strong>
+          <strong>Presenters:</strong>
           {% if page.instructor %}
           {{page.instructor | join: ', ' %}}
           {% else %}
@@ -21,7 +21,7 @@
           </p>
           {% if page.helper %}
           <p>
-          <strong>Facilitators:</strong>
+          <strong>Helpers:</strong>
           {{page.helper | join: ', ' %}}
           </p>
           {% endif %}
