--- a/_includes/sc/who.html
+++ b/_includes/sc/who.html
@@ -2,9 +2,7 @@
   <strong>Who:</strong>
   The event is organised as part of the <a href="https://tenet-rccpii.github.io/rccpii-2018/">Rural Campuses Connection Project II</a>
   (RCCPII)
-  Capacity Development Programme. Everybody who has participated in Carpentry instructor training is invited to join us 
-  for an informal meetup followed by an opportunity to discuss progress with the
-  <a href="https://carpentries.github.io/instructor-training/checkout/">instructor checkout process</a> for instructor trainees who 
-  still want to complete their qualification.
+  Capacity Development Programme and the DUT and UKZN Carpentries initiatives. Everybody who has participated in Carpentry instructor training is invited to join us 
+  for an informal meetup and discussion about plans for growing the Carpentries community in KwaZulu Natal and beyond.
 </p>
 
