--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -1,14 +1,12 @@
 <div class="row">
   <div class="col-md-6">
-    <h3>Friday, 16 November</h3>
+    <h3>Monday, 3 December 2018</h3>
     <table class="table table-striped">
-      <tr> <td>10:00 - 10:30</td>  <td>Welcome and introductions</td> </tr>
-      <tr> <td>10:30 - 10:45</td>  <td>Overview of the RCCPII Capacity Development Project</td> </tr>
-      <tr> <td>10:45 - 11:15</td>  <td>Presentation about professional development opportunities in the Carpentries</td> </tr>
-      <tr> <td>11:15 - 11:45</td>  <td>Q&A Session </td> </tr>
-      <tr> <td>11:45 - 12:15</td>  <td>Growing the Carpentries Community in the Western Cape</td> </tr>
-      <tr> <td>12:15 - 13:00</td>  <td>Completing your Carpentries Instructor Certification</td> </tr>
-    </table>
+      <tr> <td>16:00 - 16:30</td>  <td>Welcome and introductions</td> </tr>
+      <tr> <td>16:30 - 17:00</td>  <td>Presentation about professional development opportunities in the Carpentries</td> </tr>
+      <tr> <td>17:00 - 18:00</td>  <td>General discussions about Carpentries in KZN and beyond</td> </tr>
+      <tr> <td>18:00 - 20:00</td>  <td>Networking and Dinner </td> </tr>
+     </table>
   </div>
 
 </div>
